--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "bootstrap": "^5.3.2",
+    "react-dom": "^18.2.0",
     "react-masonry-css": "^1.0.16",
     "react-zoom-pan-pinch": "^3.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-deb": "^7.7.0",
     "@electron-forge/maker-rpm": "^7.7.0",
@@ -38,17 +41,15 @@
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron-forge/plugin-webpack": "^7.7.0",
     "@electron/fuses": "^1.8.0",
-    "electron": "34.2.0",
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "dotenv-webpack": "^8.1.0",
+    "electron": "34.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
